--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
 
+    <!-- My Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu&display=swap" rel="stylesheet" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -15,9 +19,9 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Alvin</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,6 +36,46 @@
       </div>
     </nav>
     <!-- akhir navbar -->
+
+    <!-- jumbotron -->
+    <section id="jumbotron" class="jumbotron">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-4 text-center">
+            <img src="img/hero.jpg" alt="Alvin" class="img-thumbnail p-4" />
+          </div>
+          <div class="col-md-5 text-white pt-5 about-me">
+            <h2 class="">Welcome To My Portfolio Website</h2>
+            <hr />
+            <p>
+              Halo, kawan-kawan. Ini adalah website Portfolio pertama saya. Saya mencoba membuat website dengan skill yang sudah saya pelajari di Channel Youtube <a href="" class="text-white text-decoration-none">Web Programming UNPAS</a>.
+              Saya harap kalian suka.
+            </p>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#d3d3d3"
+          fill-opacity="1"
+          d="M0,64L48,74.7C96,85,192,107,288,144C384,181,480,235,576,234.7C672,235,768,181,864,165.3C960,149,1056,171,1152,165.3C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- akhir jumbotron -->
+
+    <!-- about -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col-md">
+            <h2>About me</h2>
+            <hr />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir about -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
