--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="col-md-4 text-center">
             <img src="img/hero.jpg" alt="Alvin" class="img-thumbnail p-4" />
           </div>
-          <div class="col-md-5 text-white pt-5 about-me">
+          <div class="col-md-5 text-white pt-5 jumbotron-me">
             <h2 class="">Welcome To My Portfolio Website</h2>
             <hr />
             <p>
@@ -67,15 +67,73 @@
     <!-- about -->
     <section id="about" class="about">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-md">
-            <h2>About me</h2>
+        <div class="row justify-content-around">
+          <div class="col-md-5">
+            <img src="img/smkn26.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="col-md-5 about-me p-5">
+            <h2 class="text-center">About me</h2>
             <hr />
+            <p>
+              Halo saya Alvin Adrianto Azza. Saya sekarang bersekolah di SMKN 26 Jakarta. Saya mengambil jurusan Teknik Manajemen Perawatan Otomotif. dan Sekarang saya sudah di penghujung akhir semester dan bersiap naik ke kelas 3 SMK
+              <br />
+              <br />
+              Jurusan Otomotif kok buat web? alasan saya buat web ini karena disaat pandemi ini, saya bingung mau ngapaian, sekolah juga tutup dan tidak bisa praktek. Jadi saya memutuskan membuat web untuk mengisi luang, sekalian menambah
+              skill untuk dilapangan kerja.
+            </p>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#2c2d30"
+          fill-opacity="1"
+          d="M0,128L60,144C120,160,240,192,360,197.3C480,203,600,181,720,154.7C840,128,960,96,1080,101.3C1200,107,1320,149,1380,170.7L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- akhir about -->
+
+    <!-- project -->
+    <section id="project" class="project">
+      <div class="container">
+        <div class="row text-center pb-5">
+          <div class="col-md text-white">
+            <h2>My Projects</h2>
+          </div>
+        </div>
+        <div class="row text-white text-center">
+          <div class="col-md">
+            <div class="card">
+              <img src="img/empty.jpg" class="card-img-top" alt="..." />
+              <div class="card-body py-5">
+                <h2 class="card-title pb-4">Company Web</h2>
+                <a href="#" class="btn btn-outline-light">Coming Soon...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img src="img/empty.jpg" class="card-img-top" alt="..." />
+              <div class="card-body py-5">
+                <h2 class="card-title pb-4">Portfolio Bootstrap 3</h2>
+                <a href="#" class="btn btn-outline-light">Coming Soon...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img src="img/empty.jpg" class="card-img-top" alt="..." />
+              <div class="card-body py-5">
+                <h2 class="card-title pb-4">Game Web</h2>
+                <a href="#" class="btn btn-outline-light">Coming Soon...</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- akhir about -->
+    <!-- akhir project -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
