--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="home">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -33,13 +33,13 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Alvin</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="#home">Alvin</a>
+        <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
             <a class="nav-link" href="#about">About</a>
             <a class="nav-link" href="#project">Projects</a>
             <a class="nav-link" href="#contact">Contact</a>
@@ -52,12 +52,12 @@
     <!-- jumbotron -->
     <section id="jumbotron" class="jumbotron">
       <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-4 text-white">
+        <div class="row justify-content-evenly">
+          <div class="col-xl-3 text-white pb-5 justify-content-center d-flex">
             <img src="img/hero.jpg" alt="Alvin" class="img-thumbnail p-4" data-aos="fade-right" data-aos-duration="700" />
           </div>
-          <div class="col-md-5 text-white pt-5 jumbotron-me" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
-            <h2 class="">Welcome To My Portfolio Website</h2>
+          <div class="col-xl-5 text-white pt-5 jumbotron-me" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
+            <h2></h2>
             <hr />
             <p>
               Halo, kawan-kawan. Ini adalah website Portfolio pertama saya. Saya mencoba membuat website dengan skill yang sudah saya pelajari di Channel Youtube <a href="" class="text-white text-decoration-none">Web Programming UNPAS</a>.
@@ -77,13 +77,13 @@
     <!-- akhir jumbotron -->
 
     <!-- about -->
-    <section id="about" class="about pt-5">
+    <section id="about" class="about">
       <div class="container">
         <div class="row justify-content-around">
-          <div class="col-md-5">
+          <div class="col-lg-5 pb-5">
             <img src="img/smkn26.jpg" alt="" class="img-fluid" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="1000" />
           </div>
-          <div class="col-md-5 about-me p-5" data-aos="fade-down-left" data-aos-offset="400" data-aos-duration="1000" data-aos-delay="300">
+          <div class="col-lg-5 about-me p-5" data-aos="fade-down-left" data-aos-offset="400" data-aos-duration="1000" data-aos-delay="300">
             <h2 class="text-center">About me</h2>
             <hr />
             <p>
@@ -107,7 +107,7 @@
     <!-- akhir about -->
 
     <!-- project -->
-    <section id="project" class="project pt-5">
+    <section id="project" class="project">
       <div class="container">
         <div class="row text-center pb-5">
           <div class="col-md text-white">
@@ -115,27 +115,27 @@
           </div>
         </div>
         <div class="row text-white text-center">
-          <div class="col-md">
+          <div class="col-md pb-5 my-project">
             <div class="card">
-              <img src="img/empty.jpg" class="card-img-top" alt="..." />
+              <img src="img/project/3.png" class="card-img-top" alt="..." />
               <div class="card-body py-5">
                 <h2 class="card-title pb-4">Company Web</h2>
                 <a href="#" class="btn btn-outline-light">Coming Soon...</a>
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md pb-5 my-project">
             <div class="card">
-              <img src="img/empty.jpg" class="card-img-top" alt="..." />
+              <img src="img/project/2.png" class="card-img-top" alt="..." />
               <div class="card-body py-5">
                 <h2 class="card-title pb-4">Portfolio Bootstrap 3</h2>
-                <a href="#" class="btn btn-outline-light">Coming Soon...</a>
+                <a href="https://rysx-ex.github.io/my-portfolio-bootstrapv3/" target="_blank" class="btn btn-outline-light">Available</a>
               </div>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md pb-5 my-project">
             <div class="card">
-              <img src="img/empty.jpg" class="card-img-top" alt="..." />
+              <img src="img/project/1.jpg" class="card-img-top" alt="..." />
               <div class="card-body py-5">
                 <h2 class="card-title pb-4">Game Web</h2>
                 <a href="#" class="btn btn-outline-light">Coming Soon...</a>
@@ -242,6 +242,12 @@
     -->
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.jumbotron h2', { duration: 2, delay: 1.5, text: 'Welcome To My Portfolio Website' });
+    </script>
     <script>
       const myProjects = document.querySelectorAll('.card');
       const contact = document.querySelectorAll('.contact-form');
