--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
     <!-- jumbotron -->
     <section id="jumbotron" class="jumbotron">
       <div class="container">
-        <div class="row justify-content-evenly">
+        <div class="row justify-content-evenly mx-3">
           <div class="col-xl-3 text-white pb-5 justify-content-center d-flex">
-            <img src="img/hero.jpg" alt="Alvin" class="img-thumbnail p-4" data-aos="fade-right" data-aos-duration="700" />
+            <div class="img-thumbnail" data-aos="fade-right" data-aos-duration="700">
+              <!-- <img src="img/hero.jpg" alt="Alvin" class="p-4" data-aos="fade-right" data-aos-duration="700" /> -->
+            </div>
           </div>
-          <div class="col-xl-5 text-white pt-5 jumbotron-me" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
+          <div class="col-xl-5 text-white jumbotron-me" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
             <h2></h2>
             <hr />
             <p>
@@ -66,20 +68,13 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#d3d3d3"
-          fill-opacity="1"
-          d="M0,64L48,74.7C96,85,192,107,288,144C384,181,480,235,576,234.7C672,235,768,181,864,165.3C960,149,1056,171,1152,165.3C1248,160,1344,128,1392,112L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
     </section>
     <!-- akhir jumbotron -->
 
     <!-- about -->
     <section id="about" class="about">
-      <div class="container">
-        <div class="row justify-content-around">
+      <div class="container pb-5">
+        <div class="row justify-content-around mx-3">
           <div class="col-lg-5 pb-5">
             <img src="img/smkn26.jpg" alt="" class="img-fluid" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="1000" />
           </div>
@@ -96,13 +91,6 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#2c2d30"
-          fill-opacity="1"
-          d="M0,128L60,144C120,160,240,192,360,197.3C480,203,600,181,720,154.7C840,128,960,96,1080,101.3C1200,107,1320,149,1380,170.7L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-        ></path>
-      </svg>
     </section>
     <!-- akhir about -->
 
@@ -114,7 +102,7 @@
             <h2 data-aos="fade-in" data-aos-offset="300" data-aos-duration="300">My Projects</h2>
           </div>
         </div>
-        <div class="row text-white text-center">
+        <div class="row text-white text-center mx-4">
           <div class="col-md pb-5 my-project">
             <div class="card">
               <img src="img/project/3.png" class="card-img-top" alt="..." />
@@ -144,13 +132,6 @@
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#ffffff"
-          fill-opacity="1"
-          d="M0,256L60,240C120,224,240,192,360,202.7C480,213,600,267,720,266.7C840,267,960,213,1080,181.3C1200,149,1320,139,1380,133.3L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"
-        ></path>
-      </svg>
     </section>
     <!-- akhir project -->
 
@@ -296,6 +277,17 @@
             console.log('Success!', response);
           })
           .catch((error) => console.error('Error!', error.message));
+      });
+    </script>
+    <script>
+      var nav = document.querySelector('nav');
+
+      window.addEventListener('scroll', function () {
+        if (window.pageYOffset > 100) {
+          nav.classList.add('bg-dark', 'shadow');
+        } else {
+          nav.classList.remove('bg-dark', 'shadow');
+        }
       });
     </script>
   </body>
