--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
       <div class="container pb-5">
         <div class="row justify-content-around mx-3">
           <div class="col-lg-5 pb-5">
-            <img src="img/smkn26.jpg" alt="" class="img-fluid" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="1000" />
+            <div class="about-img">
+              <img src="img/smkn26.jpg" alt="" class="img-fluid" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="1000" />
+            </div>
           </div>
           <div class="col-lg-5 about-me p-5" data-aos="fade-down-left" data-aos-offset="400" data-aos-duration="1000" data-aos-delay="300">
             <h2 class="text-center">About me</h2>
