--- a/index.html
+++ b/index.html
@@ -51,48 +51,73 @@
 
     <!-- jumbotron -->
     <section id="jumbotron" class="jumbotron">
-      <div class="container">
-        <div class="row justify-content-evenly mx-3">
-          <div class="col-xl-3 text-white pb-5 justify-content-center d-flex">
-            <div class="img-thumbnail" data-aos="fade-right" data-aos-duration="700">
-              <!-- <img src="img/hero.jpg" alt="Alvin" class="p-4" data-aos="fade-right" data-aos-duration="700" /> -->
+      <div class="background">
+        <div class="kotak"></div>
+        <div class="triangle"></div>
+        <div class="triangle-1"></div>
+        <div class="circle"></div>
+        <div class="circle-1"></div>
+        <div class="container">
+          <div class="row justify-content-evenly mx-3">
+            <div class="col-xl-3 text-white pb-5 justify-content-center d-flex">
+              <div class="img-thumbnail" data-aos="fade-right" data-aos-duration="700">
+                <!-- <img src="img/hero.jpg" alt="Alvin" class="p-4" data-aos="fade-right" data-aos-duration="700" /> -->
+              </div>
             </div>
-          </div>
-          <div class="col-xl-5 text-white jumbotron-me" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
-            <h2></h2>
-            <hr />
-            <p>
-              Halo, kawan-kawan. Ini adalah website Portfolio pertama saya. Saya mencoba membuat website dengan skill yang sudah saya pelajari di Channel Youtube <a href="" class="text-white text-decoration-none">Web Programming UNPAS</a>.
-              Saya harap kalian suka.
-            </p>
+            <div class="col-xl-5 text-white jumbotron-me" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
+              <h2></h2>
+              <hr />
+              <p>
+                Halo, kawan-kawan. Ini adalah website Portfolio pertama saya. Saya mencoba membuat website dengan skill yang sudah saya pelajari di Channel Youtube
+                <a href="" class="text-white text-decoration-none">Web Programming UNPAS</a>. Saya harap kalian suka.
+              </p>
+            </div>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="lightgray"
+          fill-opacity="1"
+          d="M0,288L48,277.3C96,267,192,245,288,224C384,203,480,181,576,176C672,171,768,181,864,192C960,203,1056,213,1152,208C1248,203,1344,181,1392,170.7L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- akhir jumbotron -->
 
     <!-- about -->
     <section id="about" class="about">
-      <div class="container pb-5">
-        <div class="row justify-content-around mx-3">
-          <div class="col-lg-5 pb-5">
-            <div class="about-img">
-              <img src="img/smkn26.jpg" alt="" class="img-fluid" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="1000" />
+      <div class="background">
+        <div class="container pb-5">
+          <div class="row justify-content-around mx-3">
+            <div class="col-lg-5 pb-5 img-me">
+              <figure class="slide-up" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="1000">
+                <img src="img/smkn26.jpg" alt="" class="img-fluid" />
+                <figcaption>SMKN 26 JAKARTA</figcaption>
+              </figure>
+              <!-- <img src="img/smkn26.jpg" alt="" class="img-fluid" data-aos="fade-down-right" data-aos-offset="400" data-aos-duration="1000" /> -->
             </div>
-          </div>
-          <div class="col-lg-5 about-me p-5" data-aos="fade-down-left" data-aos-offset="400" data-aos-duration="1000" data-aos-delay="300">
-            <h2 class="text-center">About me</h2>
-            <hr />
-            <p>
-              Halo saya Alvin Adrianto Azza. Saya sekarang bersekolah di SMKN 26 Jakarta. Saya mengambil jurusan Teknik Manajemen Perawatan Otomotif. dan Sekarang saya sudah di penghujung akhir semester dan bersiap naik ke kelas 3 SMK
-              <br />
-              <br />
-              Jurusan Otomotif kok buat web? alasan saya buat web ini karena disaat pandemi ini, saya bingung mau ngapaian, sekolah juga tutup dan tidak bisa praktek. Jadi saya memutuskan membuat web untuk mengisi luang, sekalian menambah
-              skill untuk dilapangan kerja.
-            </p>
+            <div class="col-lg-5 about-me p-5" data-aos="fade-in" data-aos-offset="400" data-aos-duration="1000" data-aos-delay="300">
+              <h2 class="text-center">About me</h2>
+              <hr />
+              <p class="pt-3">
+                Halo saya Alvin Adrianto Azza. Saya sekarang bersekolah di SMKN 26 Jakarta. Saya mengambil jurusan Teknik Manajemen Perawatan Otomotif. dan Sekarang saya sudah di penghujung akhir semester dan bersiap naik ke kelas 3 SMK
+                <br />
+                <br />
+                Jurusan Otomotif kok buat web? alasan saya buat web ini karena disaat pandemi ini, saya bingung mau ngapaian, sekolah juga tutup dan tidak bisa praktek. Jadi saya memutuskan membuat web untuk mengisi luang, sekalian menambah
+                skill untuk dilapangan kerja.
+              </p>
+            </div>
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#2c2d30"
+          fill-opacity="1"
+          d="M0,192L48,202.7C96,213,192,235,288,250.7C384,267,480,277,576,261.3C672,245,768,203,864,192C960,181,1056,203,1152,181.3C1248,160,1344,96,1392,64L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- akhir about -->
 
@@ -134,6 +159,13 @@
           </div>
         </div>
       </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ffffff"
+          fill-opacity="1"
+          d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!-- akhir project -->
 
@@ -239,7 +271,7 @@
         img.dataset.aos = 'fade-right';
         img.dataset.aosDuration = 1200;
         img.dataset.aosDelay = i * 10;
-        img.dataset.aosOffset = 400;
+        img.dataset.aosOffset = 300;
       });
 
       myProjects.forEach((img, i) => {
