fix jumbotron img

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         <div class="circle"></div>
         <div class="circle-1"></div>
         <div class="container">
-          <div class="row justify-content-evenly mx-3">
+          <div class="row justify-content-evenly align-items-center mx-3">
             <div class="col-xl-3 text-white pb-5 justify-content-center d-flex">
               <div class="img-thumbnail" data-aos="fade-right" data-aos-duration="700">
-                <!-- <img src="img/hero.jpg" alt="Alvin" class="p-4" data-aos="fade-right" data-aos-duration="700" /> -->
+                <img src="img/hero.png" alt="Alvin" class="p-4" data-aos="fade-right" data-aos-duration="700" />
               </div>
             </div>
             <div class="col-xl-5 text-white jumbotron-me" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
